monitoring/overlays/test/grafana/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
  - http
  routes:
  - kind: Rule
    match: PathPrefix(`/internal/grafana`)
    services:
    - kind: Service
      name: sensrnet-monitoring-grafana
      port: 3000
    middlewares:
    - name: sensrnet-monitoring-headers-empty-auth
    - name: sensrnet-monitoring-requestmodifier-grafana
